fixed the gap left between the nav bar and picture in big screens

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 }
 
 .faker {
-  height: 67px;
+  height: 58px;
 }
 
 .secnames {
